--- a/KKFriends/Resources/OldFriends.plist
+++ b/KKFriends/Resources/OldFriends.plist
@@ -8,7 +8,7 @@
 		<key>songname</key>
 		<string>S01E01</string>
 		<key>singername</key>
-		<string>老铁们</string>
+		<string>老友记</string>
 		<key>lrcname</key>
 		<string>tingvoa.com_101.lrc</string>
 		<key>singerIcon</key>
@@ -22,7 +22,7 @@
 		<key>songname</key>
 		<string>S01E02</string>
 		<key>singername</key>
-		<string>老铁们</string>
+		<string>老友记</string>
 		<key>lrcname</key>
 		<string>tingvoa.com_102.lrc</string>
 		<key>singerIcon</key>
@@ -36,7 +36,7 @@
 		<key>songname</key>
 		<string>S01E03</string>
 		<key>singername</key>
-		<string>老铁们</string>
+		<string>老友记</string>
 		<key>lrcname</key>
 		<string>tingvoa.com_103.lrc</string>
 		<key>singerIcon</key>
@@ -50,7 +50,7 @@
 		<key>songname</key>
 		<string>S01E04</string>
 		<key>singername</key>
-		<string>老铁们</string>
+		<string>老友记</string>
 		<key>lrcname</key>
 		<string>tingvoa.com_104.lrc</string>
 		<key>singerIcon</key>
@@ -64,7 +64,7 @@
 		<key>songname</key>
 		<string>S01E05</string>
 		<key>singername</key>
-		<string>老铁们</string>
+		<string>老友记</string>
 		<key>lrcname</key>
 		<string>tingvoa.com_105.lrc</string>
 		<key>singerIcon</key>
@@ -78,7 +78,7 @@
 		<key>songname</key>
 		<string>S01E06</string>
 		<key>singername</key>
-		<string>老铁们</string>
+		<string>老友记</string>
 		<key>lrcname</key>
 		<string>tingvoa.com_106.lrc</string>
 		<key>singerIcon</key>
@@ -92,7 +92,7 @@
 		<key>songname</key>
 		<string>S01E07</string>
 		<key>singername</key>
-		<string>老铁们</string>
+		<string>老友记</string>
 		<key>lrcname</key>
 		<string>tingvoa.com_107.lrc</string>
 		<key>singerIcon</key>
@@ -106,7 +106,7 @@
 		<key>songname</key>
 		<string>S01E08</string>
 		<key>singername</key>
-		<string>老铁们</string>
+		<string>老友记</string>
 		<key>lrcname</key>
 		<string>tingvoa.com_108.lrc</string>
 		<key>singerIcon</key>
@@ -120,7 +120,7 @@
 		<key>songname</key>
 		<string>S01E09</string>
 		<key>singername</key>
-		<string>老铁们</string>
+		<string>老友记</string>
 		<key>lrcname</key>
 		<string>tingvoa.com_109.lrc</string>
 		<key>singerIcon</key>
@@ -134,7 +134,7 @@
 		<key>songname</key>
 		<string>S01E10</string>
 		<key>singername</key>
-		<string>老铁们</string>
+		<string>老友记</string>
 		<key>lrcname</key>
 		<string>tingvoa.com_110.lrc</string>
 		<key>singerIcon</key>
@@ -148,7 +148,7 @@
 		<key>songname</key>
 		<string>S01E11</string>
 		<key>singername</key>
-		<string>老铁们</string>
+		<string>老友记</string>
 		<key>lrcname</key>
 		<string>tingvoa.com_111.lrc</string>
 		<key>singerIcon</key>
@@ -162,7 +162,7 @@
 		<key>songname</key>
 		<string>S01E12</string>
 		<key>singername</key>
-		<string>老铁们</string>
+		<string>老友记</string>
 		<key>lrcname</key>
 		<string>tingvoa.com_112.lrc</string>
 		<key>singerIcon</key>
@@ -176,7 +176,7 @@
 		<key>songname</key>
 		<string>S01E13</string>
 		<key>singername</key>
-		<string>老铁们</string>
+		<string>老友记</string>
 		<key>lrcname</key>
 		<string>tingvoa.com_113.lrc</string>
 		<key>singerIcon</key>
@@ -190,7 +190,7 @@
 		<key>songname</key>
 		<string>S01E14</string>
 		<key>singername</key>
-		<string>老铁们</string>
+		<string>老友记</string>
 		<key>lrcname</key>
 		<string>tingvoa.com_114.lrc</string>
 		<key>singerIcon</key>
@@ -204,7 +204,7 @@
 		<key>songname</key>
 		<string>S01E15</string>
 		<key>singername</key>
-		<string>老铁们</string>
+		<string>老友记</string>
 		<key>lrcname</key>
 		<string>tingvoa.com_115.lrc</string>
 		<key>singerIcon</key>
@@ -218,7 +218,7 @@
 		<key>songname</key>
 		<string>S01E16</string>
 		<key>singername</key>
-		<string>老铁们</string>
+		<string>老友记</string>
 		<key>lrcname</key>
 		<string>tingvoa.com_116.lrc</string>
 		<key>singerIcon</key>
@@ -232,7 +232,7 @@
 		<key>songname</key>
 		<string>S01E17</string>
 		<key>singername</key>
-		<string>老铁们</string>
+		<string>老友记</string>
 		<key>lrcname</key>
 		<string>tingvoa.com_117.lrc</string>
 		<key>singerIcon</key>
@@ -246,7 +246,7 @@
 		<key>songname</key>
 		<string>S01E18</string>
 		<key>singername</key>
-		<string>老铁们</string>
+		<string>老友记</string>
 		<key>lrcname</key>
 		<string>tingvoa.com_118.lrc</string>
 		<key>singerIcon</key>
@@ -260,7 +260,7 @@
 		<key>songname</key>
 		<string>S01E19</string>
 		<key>singername</key>
-		<string>老铁们</string>
+		<string>老友记</string>
 		<key>lrcname</key>
 		<string>tingvoa.com_119.lrc</string>
 		<key>singerIcon</key>
@@ -274,7 +274,7 @@
 		<key>songname</key>
 		<string>S01E20</string>
 		<key>singername</key>
-		<string>老铁们</string>
+		<string>老友记</string>
 		<key>lrcname</key>
 		<string>tingvoa.com_120.lrc</string>
 		<key>singerIcon</key>
@@ -288,7 +288,7 @@
 		<key>songname</key>
 		<string>S01E21</string>
 		<key>singername</key>
-		<string>老铁们</string>
+		<string>老友记</string>
 		<key>lrcname</key>
 		<string>tingvoa.com_121.lrc</string>
 		<key>singerIcon</key>
@@ -302,7 +302,7 @@
 		<key>songname</key>
 		<string>S01E22</string>
 		<key>singername</key>
-		<string>老铁们</string>
+		<string>老友记</string>
 		<key>lrcname</key>
 		<string>tingvoa.com_122.lrc</string>
 		<key>singerIcon</key>
@@ -316,7 +316,7 @@
 		<key>songname</key>
 		<string>S01E23</string>
 		<key>singername</key>
-		<string>老铁们</string>
+		<string>老友记</string>
 		<key>lrcname</key>
 		<string>tingvoa.com_123.lrc</string>
 		<key>singerIcon</key>
@@ -330,7 +330,7 @@
 		<key>songname</key>
 		<string>S01E24</string>
 		<key>singername</key>
-		<string>老铁们</string>
+		<string>老友记</string>
 		<key>lrcname</key>
 		<string>tingvoa.com_124.lrc</string>
 		<key>singerIcon</key>
